# zero-to-prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  init_db.sh  input.hurl  post_commit.sh  pre_commit.sh  spec.yaml
.github/workflows/: lint-format.yml  test.yml
configuration/: base.yaml  production.yaml
migrations/: 20250114235224_add_status_to_subscriptions.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telementry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
