[package]
name = "zero-to-prod"
version = "0.1.0"
authors = ["Bhuwan Pandit"]
edition = "2021"
default-run = "zero-to-prod"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero-to-prod"
path = "src/main.rs"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dependencies]
actix-web = "4"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
config = "0.14.1"
once_cell = "1.20.2"
reqwest = "0.12.9"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
