[package]
name = "zero-to-prod"
version = "0.1.0"
authors = ["Bhuwan Pandit"]
edition = "2021"
default-run = "zero-to-prod"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero-to-prod"
path = "src/main.rs"

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dependencies]
actix-web = "4"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
config = "0.14.1"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.19.0"


[profile.release]
strip = true

[dev-dependencies]
claims = "0.8.0"
fake = "3.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
